bee-common/bee-common-derive/tests/packable/fail/missing_error.stderr
error: Types that derive `Packable` require a `#[packable(error = ...)]` attribute.
  --> $DIR/missing_error.rs:10:12
   |
10 | pub struct Point(i32, i32);
   |            ^^^^^
